@startuml

title __UI's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.MainActivity {
          + dialog : AlertDialog
          - allProjects : Project[]
          - dialogEditText : EditText
          - dialogSpinner : Spinner
          - lblNoTasks : TextView
          - listTasks : RecyclerView
          - tasks : ArrayList<Task>
          + onCreate()
          + onCreateOptionsMenu()
          + onDeleteTask()
          + onOptionsItemSelected()
          - addTask()
          - getAddTaskDialog()
          - onPositiveButtonClick()
          - populateDialogSpinner()
          - showAddTaskDialog()
          - updateTasks()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      enum SortMethod {
        ALPHABETICAL
        ALPHABETICAL_INVERTED
        NONE
        OLD_FIRST
        RECENT_FIRST
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.TasksAdapter {
          - tasks : List<Task>
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          ~ TasksAdapter()
          ~ updateTasks()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      interface com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener {
          {abstract} + onDeleteTask()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder {
          - imgDelete : AppCompatImageView
          - imgProject : AppCompatImageView
          - lblProjectName : TextView
          - lblTaskName : TextView
          ~ TaskViewHolder()
          ~ bind()
      }
    }
  }
  

  com.cleanup.todoc.ui.MainActivity .up.|> com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
  com.cleanup.todoc.ui.MainActivity -up-|> android.support.v7.app.AppCompatActivity
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.TasksAdapter : adapter
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.MainActivity.SortMethod : sortMethod
  com.cleanup.todoc.ui.MainActivity +-down- com.cleanup.todoc.ui.MainActivity.SortMethod
  com.cleanup.todoc.ui.TasksAdapter -up-|> android.support.v7.widget.RecyclerView.Adapter
  com.cleanup.todoc.ui.TasksAdapter o-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener
  com.cleanup.todoc.ui.TasksAdapter +-down- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
  com.cleanup.todoc.ui.TasksAdapter +-down- com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder
  com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder -up-|> android.support.v7.widget.RecyclerView.ViewHolder
  com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder o-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
